@@ -1410,6 +1410,8 @@ please see math/README to configure.',
 'servertime'               => 'Server time',
 'guesstimezone'            => 'Fill in from browser',
 'allowemail'               => 'Enable e-mail from other users',
+'prefs-searchoptions'      => 'Search options',
+'prefs-namespaces'         => 'Namespaces',
 'defaultns'                => 'Search in these namespaces by default:',
 'default'                  => 'default',
 'files'                    => 'Files',
