@@ -310,6 +310,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14273) Fix for HTTP Accept header parsing with spaces as from Konqueror
 * (bug 14312) Update LanguageKaa.php for handling transform issues with i to İ
   and I to ı
+* (bug 13826) MediaWiki:Defaultns accepts Wikicode
 
 === API changes in 1.13 ===
 
